@@ -4,6 +4,7 @@ import io.swagger.v3.oas.annotations.tags.Tag;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -14,12 +15,11 @@ import promiseofblood.umpabackend.domain.vo.Major;
 import promiseofblood.umpabackend.domain.vo.RegionCategory;
 import promiseofblood.umpabackend.domain.vo.Subject;
 import promiseofblood.umpabackend.domain.vo.WeekDay;
-import promiseofblood.umpabackend.dto.RegionCategoryDto;
-import promiseofblood.umpabackend.dto.RegionDto;
 import promiseofblood.umpabackend.dto.response.CollegeResponse;
 import promiseofblood.umpabackend.dto.response.GradeResponse;
 import promiseofblood.umpabackend.dto.response.LessonStyleResponse;
 import promiseofblood.umpabackend.dto.response.MajorResponse;
+import promiseofblood.umpabackend.dto.response.RegionCategoryResponse;
 import promiseofblood.umpabackend.dto.response.SubjectResponse;
 import promiseofblood.umpabackend.dto.response.WeekdayResponse;
 
@@ -29,90 +29,61 @@ import promiseofblood.umpabackend.dto.response.WeekdayResponse;
 public class ConstantsController {
 
   @GetMapping("/majors")
-  public List<MajorResponse> getMajors() {
+  public ResponseEntity<List<MajorResponse>> getMajors() {
 
-    return Stream.of(Major.values())
-      .map(Major -> MajorResponse.builder()
-        .code(Major.name())
-        .name(Major.getKoreanName())
-        .build())
-      .collect(Collectors.toList());
+    return ResponseEntity.ok(Stream.of(Major.values())
+      .map(major -> MajorResponse.builder().code(major.name()).name(major.getKoreanName()).build())
+      .collect(Collectors.toList()));
   }
 
   @GetMapping("/weekdays")
-  public List<WeekdayResponse> getWeekDays() {
+  public ResponseEntity<List<WeekdayResponse>> getWeekDays() {
 
-    return Stream.of(WeekDay.values())
-      .map(weekDay -> WeekdayResponse.builder()
-        .code(weekDay.name())
-        .name(weekDay.getKoreanName())
-        .build())
-      .collect(Collectors.toList());
+    return ResponseEntity.ok(Stream.of(WeekDay.values()).map(
+      weekDay -> WeekdayResponse.builder().code(weekDay.name()).name(weekDay.getKoreanName())
+        .build()).collect(Collectors.toList()));
   }
 
   @GetMapping("/colleges")
-  public List<CollegeResponse> getColleges() {
+  public ResponseEntity<List<CollegeResponse>> getColleges() {
 
-    return Stream.of(College.values())
-      .map(college -> CollegeResponse.builder()
-        .code(college.name())
-        .name(college.getKoreanName())
-        .build())
-      .collect(Collectors.toList());
+    return ResponseEntity.ok(Stream.of(College.values()).map(
+      college -> CollegeResponse.builder().code(college.name()).name(college.getKoreanName())
+        .build()).collect(Collectors.toList()));
   }
 
   @GetMapping("/subjects")
-  public List<SubjectResponse> getSubjects() {
+  public ResponseEntity<List<SubjectResponse>> getSubjects() {
 
-    return Stream.of(Subject.values())
-      .map(college -> SubjectResponse.builder()
-        .code(college.name())
-        .name(college.getKoreanName())
-        .build())
-      .collect(Collectors.toList());
+    return ResponseEntity.ok(Stream.of(Subject.values()).map(
+      college -> SubjectResponse.builder().code(college.name()).name(college.getKoreanName())
+        .build()).collect(Collectors.toList()));
   }
 
   @GetMapping("lessonStyles")
-  public List<LessonStyleResponse> getLessonStyles() {
+  public ResponseEntity<List<LessonStyleResponse>> getLessonStyles() {
 
-    return Stream.of(LessonStyle.values())
-      .map(lessonStyle -> LessonStyleResponse.builder()
-        .code(lessonStyle.name())
-        .name(lessonStyle.getKoreanName())
-        .build())
-      .collect(Collectors.toList());
+    return ResponseEntity.ok(Stream.of(LessonStyle.values()).map(
+      lessonStyle -> LessonStyleResponse.builder().code(lessonStyle.name())
+        .name(lessonStyle.getKoreanName()).build()).collect(Collectors.toList()));
   }
 
 
   @GetMapping("/grades")
-  public List<GradeResponse> getGrades() {
+  public ResponseEntity<List<GradeResponse>> getGrades() {
 
-    return Stream.of(Grade.values())
-      .map(grade -> GradeResponse.builder()
-        .code(grade.name())
-        .name(grade.getKoreanName())
-        .build())
-      .collect(Collectors.toList());
+    return ResponseEntity.ok(Stream.of(Grade.values())
+      .map(grade -> GradeResponse.builder().code(grade.name()).name(grade.getKoreanName()).build())
+      .collect(Collectors.toList()));
   }
 
   @GetMapping("/regions")
-  public List<RegionCategoryDto> getRegions() {
+  public ResponseEntity<List<RegionCategoryResponse>> getRegions() {
 
-    return Stream.of(RegionCategory.values())
-      .map(regionCategory -> RegionCategoryDto.builder()
-        .code(regionCategory.getCode())
-        .name(regionCategory.getKoreanName())
-        .regions(
-          regionCategory.getRegions().stream()
-            .map(region -> RegionDto.builder()
-              .code(region.getCode())
-              .name(region.getKoreanName())
-              .build())
-            .collect(Collectors.toList())
-        )
-        .build()
-      )
-      .collect(Collectors.toList());
+    List<RegionCategoryResponse> regionCategories = Stream.of(RegionCategory.values())
+      .map(RegionCategoryResponse::from)
+      .toList();
+
+    return ResponseEntity.ok(regionCategories);
   }
-
 }
